--- a/docs/Sundries/^正则表达式$.md
+++ b/docs/Sundries/^正则表达式$.md
@@ -56,9 +56,9 @@ https://regexr.com/ 正则在线检测
 
 如果没有设置`multiline`只能匹配后面没有换行符的
 
-<img src="D:\java资料\我的笔记\Snipaste_2020-08-22_21-41-34.png" style="zoom:80%;" />
+<img src="..\..\imgs\_Net\Snipaste_2020-08-22_21-41-34.png" style="zoom:80%;" />
 
-<img src="D:\java资料\我的笔记\Snipaste_2020-08-22_21-44-11.png" style="zoom:80%;" />
+<img src="..\..\imgs\_Net\Snipaste_2020-08-22_21-44-11.png" style="zoom:80%;" />
 
 ## 例子：
 
