--- a/docs/Hardware/主分区、扩展分区、逻辑分区、动态分区.md
+++ b/docs/Hardware/主分区、扩展分区、逻辑分区、动态分区.md
@@ -4,6 +4,8 @@
 
 https://www.zhihu.com/question/20281689
 
+分区就是从磁盘上划分出一大片==连续==的扇区。
+
 - **主分区**（min=1,max=4）
 
   ==主分区也叫引导分区==，Windows系统一般需要安装在这个主分区中，这样才能保证卡机自动进入系统。简单来说，主分区就是可以引导电脑开机读取文件的一个磁盘分区。
