--- a/docs/Linux/基础/kernel/内核参数.md
+++ b/docs/Linux/基础/kernel/内核参数.md
@@ -1,16 +1,22 @@
-# sysctl
+# 内核参数
 
-参考：
+you should check here：
+
+https://www.kernel.org/doc/html/latest/admin-guide/sysctl/index.html
+
+https://www.kernel.org/doc/Documentation/sysctl/kernel.txt
 
 https://wsgzao.github.io/post/sysctl/
 
 https://developer.aliyun.com/article/718976
 
-## 概述
+https://wiki.archlinux.org/index.php/sysctl
 
-用于在内核运行时动态修改内核的运行参数，==重启后失效==，如果想要不失效在`/etc/sysctl.conf`中修改。==所有可以修改的参数都在`/proc/sys`文件夹下==
+## 概念
 
-## 使用
+内核参数(kernel tuables )决定了系统的引导和运行时的状态。可以通过`sysctl`和`/etc/sysctl.conf`来配置
+
+## sysctl
 
 - sysctl -a
 
@@ -20,7 +26,7 @@ https://developer.aliyun.com/article/718976
 
   加载内核配置文件，默认`/etc/sysctl.conf`
 
-- sysctl key=value
+- sysctl key=value，也可以通过修改`/proc/sys`下的文件。但是不是持久配置。
 
   等于号左右两边不能有空格
 
@@ -31,11 +37,168 @@ https://developer.aliyun.com/article/718976
 
   ==这里表示屏蔽icmp echo，其他主机不能通过ping命令来检查该主机是否存活==
 
-## sysctl.conf优化文件
+## sysctl.conf
 
-> 要想让配置生效需要 `sysctl -p`
+https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/7/html/kernel_administration_guide/working_with_sysctl_and_kernel_tunables
+
+https://wiki.archlinux.org/index.php/sysctl
+
+为了持久配置可以将tunables写入到`sysctl.conf`中。可以修改`/etc/sysctl.d/99-custom.conf`或`/etc/sysctl.conf`
+
+按照如下格式编写：`<tunable class>.<tunable> = <value>`
+
+### tunable
+
+tunable支持如下字段
+
+| Class  | Subsystem                                          |
+| :----- | :------------------------------------------------- |
+| abi    | Execution domains and personalities                |
+| crypto | Cryptographic interfaces                           |
+| debug  | Kernel debugging interfaces                        |
+| dev    | Device specific information                        |
+| fs     | Global and specific filesystem tunables            |
+| kernel | Global kernel tunables                             |
+| net    | Network tunables                                   |
+| sunrpc | Sun Remote Procedure Call (NFS)                    |
+| user   | User Namespace limits                              |
+| vm     | Tuning and management of memory, buffer, and cache |
+
+### network interface tunable
+
+所有和网络相关的配置参数都在`/proc/sys/net`下。
+
+最长使用的两个文件是：
+
+1. `/proc/sys/net/core/` 内核和网络交互层
+2. `/proc/sys/net/ipv4/` 防止主机做为router被流量攻击的参数
+
+#### /proc/sys/net/ipv4
+
+##### 子目录
+
+1. `/proc/sys/net/ipv4/conf/` 
+
+   针对单独的iface参数设置
+
+   ```
+   root in /proc/sys/net/ipv4/conf λ ls
+   all  default  docker0  eth0  lo  vetheca2aee
+   ```
+
+2. `/proc/sys/net/ipv4/neigh/`
+
+   针对host 通信的iface参数设置
+
+3. `/proc/sys/net/ipv4/route/`
+
+   针对route的iface参数设置
+
+##### 子目录tunable
+
+`net.ipv4.<conf | neigh | route>.<tunable> = <value>`
 
 0表示false，1表示true
+
+- log_martinas
+
+  Log packets with impossible addresses to kernel log
+
+- accept_redirects
+
+  Accept ICMP redirect messages.
+
+- forwarding
+
+  Enable IP forwarding on an interface.
+
+- mc_forwarding
+
+  Do multicast routing.
+
+- medium_id
+
+  Arbitrary value used to differentiate the devices by the medium they are attached to.
+
+- proxy_arp
+
+  Do proxy arp.
+
+- secure_redirects
+
+  Accept ICMP redirect messages only to gateways listed in the interface’s current gateway list.
+
+- send_redirects
+
+  Send redirects, if router.
+
+- accept_local
+
+  Accept packets with local source addresses.
+
+- route_localnet
+
+  Do not consider loopback addresses(不存在的地址) as martian source or destination while routing.
+
+- rp_filter
+
+  Enable source Validation
+
+  | Value | Effect                                                |
+  | :---: | :---------------------------------------------------- |
+  |  `0`  | No source validation.                                 |
+  |  `1`  | Strict mode as defined in RFC3704 Strict Reverse Path |
+  |  `2`  | Loose mode as defined in RFC3704 Loose Reverse Path   |
+
+- arp_filter
+
+  | Value | Effect                                                       |
+  | :---: | :----------------------------------------------------------- |
+  |  `0`  | (default) The kernel can respond to arp requests with addresses from other interfaces. It usually makes sense, because it increases the chance of successful communication. |
+  |  `1`  | Allows you to have multiple network interfaces on the samesubnet, and have the ARPs for each interface be answered based on whether or not the kernel would route a packet from the ARP’d IP out that interface (therefore you must use source based routing for this to work). In other words it allows control of cards (usually 1) that respond to an arp request. |
+
+- arp_ignore
+
+  | Value | Effect                                                       |
+  | :---: | :----------------------------------------------------------- |
+  |  `0`  | (default): reply for any local target IP address, configured on any interface |
+  |  `1`  | reply only if the target IP address is local address configured on the incoming interface |
+  |  `2`  | reply only if the target IP address is local address configured on the incoming interface and both with the sender’s IP address are part from same subnet on this interface |
+  |  `3`  | do not reply for local addresses configured with scope host, only resolutions for global and link addresses are replied |
+  | `4-7` | reserved                                                     |
+  |  `8`  | do not reply for all local addresses The max value from conf/{all,interface}/arp_ignore is used when ARP request is received on the {interface} |
+
+- arp_notify
+
+  | Value | Effect                                                       |
+  | :---- | :----------------------------------------------------------- |
+  | 0     | do nothing                                                   |
+  | 1     | Generate gratuitous arp requests when device is brought up or hardware address changes. |
+
+- arp_accept
+
+  Define behavior for gratuitous ARP frames who’s IP is not already present in the ARP table
+
+  | Value | Effect                                     |
+  | :---- | :----------------------------------------- |
+  | 0     | do not create new entries in the ARP table |
+  | 1     | create new entries in the ARP table.       |
+
+- disable_policy
+
+  Disable IPSEC policy (SPD) for this interface
+
+- disable_xfrm
+
+  Disable IPSEC encryption on this interface, whatever the policy
+
+- xfrm4_gc_thresh
+
+  The threshold at which we start garbage collecting for IPv4 destination cache entries.
+
+## 案例
+
+https://wiki.archlinux.org/index.php/sysctl
 
 配置一：
 
@@ -124,7 +287,7 @@ net.netfilter.nf_conntrack_max=121005752
 kernel.core_pattern=/var/coredump/core.%e.%p.%t
 ```
 
-常用配置
+配置三：
 
 ```shell
 net.ipv4.ip_forward = 0 
@@ -159,4 +322,6 @@ vm.swappiness=10
 net.netfilter.nf_conntrack_max=121005752
 kernel.core_pattern=/var/coredump/core.%e.%p.%t
 ```
+
+
 
