--- a/docs/Hardware/4k对齐.md
+++ b/docs/Hardware/4k对齐.md
@@ -17,7 +17,7 @@ https://www.diskgenius.cn/exp/about-4k-alignment.php
 
 格式化是对分区范围内扇区的使用进行规划，划分固定大小的簇。==格式化后分区就会以簇为最小单位读写，文件得数据，属性等信息都会保存到簇中==。
 
-<img src="..\..\..\..\imgs\_Hardware\v2-328652ba4b107448ba4703066fa10255_720w.png"/>
+<img src="...\..\..\..\imgs\_Hardware\v2-328652ba4b107448ba4703066fa10255_720w.png"/>
 
 ## 4k对齐
 
