--- a/docs/Database/MySQL/创建用户与授权.md
+++ b/docs/Database/MySQL/创建用户与授权.md
@@ -66,6 +66,8 @@ REVOKE privilege ON databasename.tablename FROM 'username'@'host';
 
 ## 更改用户密码
 
+==后面发行的mysql中将PASSWORD函数去掉了==
+
 pattern：
 
 SET PASSWORD FOR 'username'@'host' = PASSWORD('newpassword');
