--- a/docs/Linux/基础/kernel/内核模块.md
+++ b/docs/Linux/基础/kernel/内核模块.md
@@ -38,7 +38,7 @@ sig_hashalgo:   sha256
 
 ## modprobe
 
-为linux kernel 手动添加和修改module，==只会载入一次不是永久生效==
+为linux kernel 手动添加和修改module，==只会载入一次不是永久生效(重启后实效)==
 
 syntax：`modprobe [options] [modulename...]`
 
