--- a/docs/Linux/基础/kernel/内核模块.md
+++ b/docs/Linux/基础/kernel/内核模块.md
@@ -4,6 +4,8 @@
 
 https://wiki.archlinux.org/index.php/Kernel_module_(%E7%AE%80%E4%BD%93%E4%B8%AD%E6%96%87)
 
+https://superuser.com/questions/15770/what-is-the-best-way-to-turn-off-the-ubuntu-beep-permanently
+
 ## 查看
 
 查看所有载入模块的状态
@@ -38,7 +40,7 @@ sig_hashalgo:   sha256
 
 ## modprobe
 
-为linux kernel 手动添加和修改module，==只会载入一次不是永久生效(重启后实效)==
+为linux kernel 手动添加和修改module，==只会载入一次不是永久生效(重启后失效，可以将其写入到loginshell或nonloginshell配置文件)==
 
 syntax：`modprobe [options] [modulename...]`
 
