--- a/docs/Linux/基础/kernel/内核模块.md
+++ b/docs/Linux/基础/kernel/内核模块.md
@@ -102,6 +102,8 @@ install fred /bin/ls -a
 
 ## 配置文件
 
+> 可以直接在`/etc/modules`中指明module name来安装module，具体查看`man modules`
+
 modeprobe所有的配置文件存储`/etc/modprobe.d/`和==`/etc/modules-load/`(由systemd管理自动加载module)==
 
 配置文件一条指令一行，有如下几个指令：
@@ -121,14 +123,4 @@ modeprobe所有的配置文件存储`/etc/modprobe.d/`和==`/etc/modules-load/`(
 - remove [modulename] [command...]
 
   和install类似，但是由`modprobe -r`调用
-
-
-
-
-
-
-
-
-
-
 
