--- a/docs/Linux/基础/开源软件/X11.md
+++ b/docs/Linux/基础/开源软件/X11.md
@@ -46,7 +46,7 @@ X client 是要求渲染图形化内容和接受输入的application，例如fir
 
 > 这里的X client application 是firefox，X server 是用户连接用的terminal
 
-
+## display manager
 
 
 
