--- a/docs/DataStruct/循环队列.md
+++ b/docs/DataStruct/循环队列.md
@@ -10,7 +10,7 @@ https://blog.csdn.net/qq_40456669/article/details/89577582
 
 [TOC]
 
-<img src="..\..\..\imgs\_DataStruct\0_1310174978ngyt.gif" style="zoom:80%;" />
+![0_1310174978ngyt](https://cdn.jsdelivr.net/gh/dhay3/image-repo@master/20210518/0_1310174978ngyt.7i2qub1n4fc0.gif)
 
 ### #思路
 
