--- a/docs/OpenSSL/证书/证书分类及流程.md
+++ b/docs/OpenSSL/证书/证书分类及流程.md
@@ -23,11 +23,11 @@ https://www.jianshu.com/p/29e0ba31fb8d
 
   在windows上可以通过`certmgr.msc`服务查看存储的根证书
 
-  ![](D:\asset\note\imgs\_openssl\Snipaste_2021-03-03_10-03-17.png)
+  ![Snipaste_2021-03-03_10-03-17](https://cdn.jsdelivr.net/gh/dhay3/image-repo@master/20210601/Snipaste_2021-03-03_10-03-17.56yitsbh8aw0.png)
 
 - 证书：由CA颁发的certificate(==crt |  cer==)通常包含版本，CA对证书的签名，签名哈希算法，签名算法，证书申请人的公钥，证书序列号，有效期，颁发者。==需要由CA的根证书对证书签名(非对称加密)==。
 
-  ![](D:\asset\note\imgs\_openssl\Snipaste_2021-03-03_11-36-32.png)
+  ![Snipaste_2021-03-03_11-36-32](https://cdn.jsdelivr.net/gh/dhay3/image-repo@master/20210601/Snipaste_2021-03-03_11-36-32.2re74gpl9wo0.png)
 
   > ==签名哈希算法(对称加密)，签名算法(非对称加密+cipher)。都是CA对证书的签名和摘要。==
   >
@@ -64,11 +64,11 @@ https://www.jianshu.com/p/29e0ba31fb8d
 
 - 证书链：chain of trust(_chain.crt)，类似于DNS查询的方式按照`_chain.crt`文件递归校验
 
-  ![](D:\asset\note\imgs\_openssl\Snipaste_2021-03-03_11-12-07.png)
+  ![Snipaste_2021-03-03_11-12-07](https://cdn.jsdelivr.net/gh/dhay3/image-repo@master/20210601/Snipaste_2021-03-03_11-12-07.5pmxm181oiw0.png)
 
 - pfx：以PKCS#12格式包含X.509证书和私钥(可选)受密码保护二进制文件，可以被导入到系统中，需要导出时的密码
 
-  <img src="D:\asset\note\imgs\_openssl\Snipaste_2021-03-03_10-49-46.png" style="zoom:80%;" />
+  ![Snipaste_2021-03-03_10-49-46](https://cdn.jsdelivr.net/gh/dhay3/image-repo@master/20210601/Snipaste_2021-03-03_10-49-46.62upmes092s0.png)
 
 - PKCS#*：最主要的有PKCS#12(标准加密格式用于证书)，PKCS#10(证书请求的加密格式)，PKCS#7(通用加密格式)
 
