--- a/docs/Linux/基础/kernel/内核模块.md
+++ b/docs/Linux/基础/kernel/内核模块.md
@@ -19,6 +19,10 @@ nf_conntrack          139264  1 ip_vs
 ...
 ```
 
+1. Module：当前模块的名字
+2. Size：模块的大小
+3. Used by：当前模块被多少模块使用，分别是什么
+
 模块具体的信息
 
 ```
