--- a/docs/Hardware/文件系统.md
+++ b/docs/Hardware/文件系统.md
@@ -4,19 +4,39 @@ reference：
 
 https://zhuanlan.zhihu.com/p/26098509
 
+https://en.wikipedia.org/wiki/File_system#File_systems_and_operating_systems
+
+https://www.howtogeek.com/235596/whats-the-difference-between-fat32-exfat-and-ntfs/
+
 ==硬盘在进行文件操作时并非以扇区为单位，而是——簇==，“簇”是系统进行分配的最小单位，==一个簇可以包含多个扇区，假设目前一个簇包含4个扇区，簇大小为2KB，一个文件大小恰为2KB，则占用了簇的所有可用空间，即便你有一个1B大小的文件需要保存，那么你占用的空间也是一个簇，簇内其他空间不可读写。==
 
 ## FAT16/FAT32
 
-早期的MS-DOS和WIN95操作系统中最常见的硬盘分区格式。一个簇最小为512个字节，其大小可以成倍增长，最大为32K，系统为每个簇分配唯一的索引号——一个16位二进制数来标识。因为16位二进制数最大为65536，所以==FAT分区==所拥有的簇的数量不可能超过65536个。这正是FAT分区大小不能超过2GB的原因。FAT16的继任者——FAT32与其原理基本相同，相比前任优势仅在于分区可以大于2GB，但==不能存储大于4GB的单个文件==，看看现在一部BD的电影都要3,4个G，显然不能满足时代的需求，被淘汰的很快。
+**File Allocation Table**
+
+> Works with all versions of Windows, Mac, Linux, game consoles, and practically anything with a USB port.
+
+早期的MS-DOS和WIN95操作系统中最常见的硬盘分区格式。一个簇最小为512个字节，其大小可以成倍增长，最大为32K，系统为每个簇分配唯一的索引号——一个16位二进制数来标识。因为16位二进制数最大为65536，所以==FAT分区==所拥有的簇的数量不可能超过65536个。这正是FAT分区大小不能超过2GB的原因。FAT16的继任者——FAT32与其原理基本相同，相比前任优势仅在于分区可以大于2GB(分区最大8TB)，但==不能存储大于4GB的单个文件==，看看现在一部BD的电影都要3,4个G，显然不能满足时代的需求，被淘汰的很快。
 
 ## NTFS
 
+**NT file system**
+
+> works with all versions of windows，but read-only with Mac by defalut，and may be read-only by default with some linux distributions.
+
 NTFS文件系统相比FAT，最大优点在于支持文件加密，通过采用==日志式文件系统，详细记录磁盘的所有读写操作（格式化后可以恢复）==，提高了数据和系统的安全性，另一点则是==突破了4GB大小限制==。也是目前机械硬盘上的分区主流。不过对于目前越来越亲民的的flash存储，过多的操作记录对存储介质造成了较大的负担，同样的存取操作，NTFS下的读写次数就会比FAT32下来得多，==造成了寿命较短的缺陷==。因此针对移动存储设备和固态硬盘，推出了exFAT文件系统。
+
+可以通过`ntfs-3g`让ntfs在linux上写入
 
 ## exFAT
 
+**Extended File Allocation Tabel**
+
+> Works with all versions of Windows and modern versions of Mac OS X, but  requires additional software on Linux. More devices support exFAT than  support NTFS, but some—particularly older ones—may only support FAT32.
+
 ==分区大小和单文件大小最大可达16EB==（16×1024×1024TB）；==簇(格式化扇区后的最小操作单元)大小非 常灵活，最小512B，最高达32MB==；采用了剩余空间分配表，空间利用率更高；同一目录下最大文件数可达65536个。其特性未必强于NTFS，主要是针对flash存储设备进行了优化（SSD，U盘），传统硬盘不能格式化为该格式。
+
+## 总结
 
 要是到现在你对扇区，簇，文件系统，分区几个名词有点混淆，不妨看看下图：
 
