PATH and set -u confilt

--- a/docs/Hardware/电学基础概念.md
+++ b/docs/Hardware/电学基础概念.md
@@ -1,5 +1,38 @@
 # 电学基础
 
+## 电源
+
+- 电荷从负极流向正极，电流从正极流向负极
+
+## 正负极
+
+- 电流表和电压表的正接线柱接正极，负接线柱接负极。==电压表电阻很大，电流几乎不会流经电压表==
+- 通常情况用电器没有正负极之分，例如：小灯泡(不包括二极管)，**电阻**
+
+- 二极管小头为正极，大头为负极。
+
+  ![2021-06-19_10-30](https://cdn.jsdelivr.net/gh/dhay3/image-repo@master/20210601/2021-06-19_10-30.5fv4duikya80.png)
+
+  三角箭头方向表示负极
+
+  ![2021-06-19_10-30_1](https://cdn.jsdelivr.net/gh/dhay3/image-repo@master/20210601/2021-06-19_10-30_1.6svw47u7ih40.png)
+
+  ==并联二极管负极接电源正极，串联二极管负极接负极==
+
+## 串联 VS 并联
+
+- 串联：电路只有一条路径，任何一处开路都会出现开路。==串联电路电流处处相等，电压等于各处电压之和==
+
+  ![2021-06-19_10-09](https://cdn.jsdelivr.net/gh/dhay3/image-repo@master/20210601/2021-06-19_10-09.21vfhn6be7gg.png)
+
+  电压表和分别和L1，L2 并联。L1和L2串联
+
+- 并联：电路有多条路径，每一条路径之间相互独立。==并联电路各支路的电压相等，干路电流等于各支路电流之和==
+
+  ![2021-06-19_10-12](https://cdn.jsdelivr.net/gh/dhay3/image-repo@master/20210601/2021-06-19_10-12.6uive7ulmq40.png)
+
+  L1和L2并联
+
 ## 直流电 VS 交流电
 
 - 直流电DC：在单位时间内，电流的大小和方向(只从正极流向负极)不发生变化的称为直流电，例如手表使用的干电池
