--- a/docs/Net/网络层/子网.md
+++ b/docs/Net/网络层/子网.md
@@ -14,7 +14,7 @@
 
 - ==从主机号借用若干个位作为子网号 subnet-id，而主机号 host-id 也就相应减少了若干个位。==
 
-  <img src="..\..\..\..\imgs\_Net\计算机网络\Snipaste_2020-08-21_12-59-27.png" style="zoom:80%;" />
+  <img src="..\..\..\imgs\_Net\计算机网络\Snipaste_2020-08-21_12-59-27.png" style="zoom:80%;" />
 
 - 凡是从其他网络发送给本单位某个主机的 IP 数据报，仍然是根据==IP 数据报的目的网络号 net-id，先找到连接在本单位网络上的路由器==。
 
@@ -24,9 +24,9 @@
 
   > 只需要在路由器处设置网关
 
-  <img src="..\..\..\..\imgs\_Net\计算机网络\Snipaste_2020-08-21_13-06-05.png" style="zoom:80%;" />
+  <img src="..\..\..\imgs\_Net\计算机网络\Snipaste_2020-08-21_13-06-05.png" style="zoom:80%;" />
   
-  <img src="..\..\..\..\imgs\_Net\计算机网络\Snipaste_2020-08-21_13-06-33.png" style="zoom:80%;" />
+  <img src="..\..\..\imgs\_Net\计算机网络\Snipaste_2020-08-21_13-06-33.png" style="zoom:80%;" />
 
 ### 划分子网后变成三级结构
 
@@ -36,7 +36,7 @@
 
 - ==划分子网只是把 IP 地址的主机号 host-id 这部分进行再划分，而不改变 IP 地址原来的网络号 net-id。== 
 
-  <img src="..\..\..\..\imgs\_Net\计算机网络\Snipaste_2020-08-21_13-09-04.png" style="zoom:80%;" />
+  <img src="..\..\..\imgs\_Net\计算机网络\Snipaste_2020-08-21_13-09-04.png" style="zoom:80%;" />
 
 
 
@@ -46,3 +46,13 @@
 - 在采用固定长度子网时，所划分的所有子网的子网掩码都是相同的。
 - 虽然根据已成为互联网标准协议的 RFC 950 文档，子网号不能为全 1 或全 0，但随着无分类域间路由选择 CIDR 的广泛使用，现在全 1 和全 0 的子网号也可以使用了，但一定要谨慎使用，确认你的路由器所用的路由选择软件是否支持全 0 或全 1 的子网号这种较新的用法。
 - 划分子网增加了灵活性，但却减少了能够连接在网络上的主机总数。
+
+## 例题
+
+1. C类网络211.168.10.0划分5个子网。
+
+   划分5个子网需要2的3次方位，所以网络位为3，掩码为211.168.10.224，主机位为5。每个子网2的5次方-2台主机
+
+2. B类网络135.41.0.0/16划分20个能容纳200台主机的网络
+
+   200台主机至少需要8位主机位，掩码255.255.255.0
