--- a/docs/Net/网络层/子网掩码.md
+++ b/docs/Net/网络层/子网掩码.md
@@ -17,13 +17,13 @@
 
   例如:
 
-  <img src="..\..\..\..\imgs\_Net\计算机网络\Snipaste_2020-08-21_12-26-52.png" style="zoom:80%;" />
+  <img src="..\..\..\imgs\_Net\计算机网络\Snipaste_2020-08-21_12-26-52.png" style="zoom:80%;" />
 
   172属于B类IP,没有划分子网, 默认255.255.0.0为B类子网掩码
 
   例如:
 
-  <img src="..\..\..\..\imgs\_Net\计算机网络\Snipaste_2020-08-21_13-12-05.png" style="zoom:80%;" />
+  <img src="..\..\..\imgs\_Net\计算机网络\Snipaste_2020-08-21_13-12-05.png" style="zoom:80%;" />
 
   将145.13.3.10 B类IP的主机位,划分8位作为子网,剩下的8作为主机号
 
@@ -33,7 +33,7 @@
 
   例如:
 
-  <img src="..\..\..\..\imgs\_Net\计算机网络\Snipaste_2020-08-21_13-27-26.png" style="zoom:80%;" />
+  <img src="..\..\..\imgs\_Net\计算机网络\Snipaste_2020-08-21_13-27-26.png" style="zoom:80%;" />
 
   192属于C类IP, 划分一位子网, 那么子网掩码为255.255.255.128, 主机可用地址192.168.0.129 -- 255, 2^7 - 1个地址
 
@@ -45,7 +45,7 @@ $$
 
 已知IP地址是141.14.72.24, 子网掩码是255.255.192.0 . 试求网络地址
 
-<img src="..\..\..\..\imgs\_Net\计算机网络\Snipaste_2020-08-21_15-11-14.png" style="zoom:80%;" />
+<img src="..\..\..\imgs\_Net\计算机网络\Snipaste_2020-08-21_15-11-14.png" style="zoom:80%;" />
 
 ​	若子网掩码改为 255.255.224.0，试求网络地址，讨论所得结果。 	
 
@@ -53,4 +53,4 @@ $$
 
 #### 默认子网掩码
 
-<img src="..\..\..\..\imgs\_Net\计算机网络\Snipaste_2020-08-21_12-50-26.png" style="zoom:80%;" />
+<img src="..\..\..\imgs\_Net\计算机网络\Snipaste_2020-08-21_12-50-26.png" style="zoom:80%;" />
