--- a/docs/Linux/basic/kernel/内核参数.md
+++ b/docs/Linux/basic/kernel/内核参数.md
@@ -245,7 +245,7 @@ net.core.rmem_default = 8388608
 net.core.rmem_max = 16777216
 # 每个网络接口接收数据包的速率比内核处理这些包的速率快时，允许送到队列的数据包的最大数目
 net.core.netdev_max_backlog = 262144  
-#web 应用中 listen 函数的 backlog 默认会给我们内核参数的 net.core.somaxconn 限制到 128，而 nginx 定义的 NGX_LISTEN_BACKLOG 默认为 511，所以有必要调整这个值
+#每个端口最大监听队列长度
 net.core.somaxconn = 262144  
 # 系统中最多有多少个 TCP 套接字不被关联到任何一个用户文件句柄上。这个限制仅仅是为了防止简单的 DoS 攻击，不能过分依靠它或者人为地减小这个值，更应该增加这个值(如果增加了内存之后)
 net.ipv4.tcp_max_orphans = 3276800  
