--- a/docs/Hardware/分区/4k对齐.md
+++ b/docs/Hardware/分区/4k对齐.md
@@ -17,9 +17,11 @@ https://www.diskgenius.cn/exp/about-4k-alignment.php
 
 格式化是对分区范围内扇区的使用进行规划，划分固定大小的簇。==格式化后分区就会以簇为最小单位读写，文件得数据，属性等信息都会保存到簇中==。
 
-<img src="...\..\..\..\imgs\_Hardware\v2-328652ba4b107448ba4703066fa10255_720w.png"/>
+<img src="..\..\..\imgs\_Hardware\v2-328652ba4b107448ba4703066fa10255_720w.png"/>
 
 ## 4k对齐
+
+> 大多数硬盘的物理扇区都是4k，所以也被称为4k对齐
 
 为磁盘划分分区时，是以逻辑扇区为单位进行划分的，分区可以从任意编号的逻辑扇区开始。
 
@@ -27,7 +29,7 @@ https://www.diskgenius.cn/exp/about-4k-alignment.php
 
 如果分区的起始位置没有对齐到某个物理扇区的边缘。格式化后，所有的“簇”也无法对齐到物理扇区的边缘。==如果没有对齐，额外的工作会增加，造成读写性能下降==
 
-![](D:\asset\note\imgs\_Linux\Snipaste_2021-03-15_11-13-58.png)
+![](..\..\..\imgs\_Linux\Snipaste_2021-03-15_11-13-58.png)
 
 格式化后，每个簇占4个逻辑扇区，这些簇都没有对齐到物理扇区的边缘，也就是说每个簇都跨越了2个物理扇区。由于磁盘总是以物理扇区进行读写，在这种分区情况下，当要读取某个簇时，实际上总是需要多读取一个物理扇区的数据。比如要读取0号簇共4个逻辑扇区的数据，磁盘实际执行时，必须要读取0号和1号两个物理扇区共8个逻辑扇区的数据。同理，对“簇”的写入操作也是这样。显而易见，这样会造成读写性能的严重下降。
 
