--- a/docs/Hardware/分区/4k对齐.md
+++ b/docs/Hardware/分区/4k对齐.md
@@ -6,18 +6,43 @@ https://www.diskgenius.cn/exp/about-4k-alignment.php
 
 ## 物理扇区 vs 逻辑扇区
 
+> 如果是SSD物理扇区被称为ssd page，一般为4K或更大，逻辑分区被称为ssd block
+
 硬盘的基本读写单位是"[扇区](../../../Hardware/文件系统)"
 
-- 物理扇区：随着硬盘容量的要求不断增加，出现了扇区大小为4096字节的硬盘。这样的大扇区被我们称为“物理扇区”
-- 逻辑扇区：但是这样的大扇区会有兼容问题，有的系统或软件无法适应。==硬盘内部将物理扇区在逻辑上划分为多个扇区片段并将其做为普通扇区==(一般为512byte，接受指令的最小操作单元)报告给操作系统机软件。这样的扇区片段被我们称为“逻辑扇区”。==我们通常说的扇区一般指逻辑扇区==
+- 物理扇区（the minimal size of a block of drive）：随着硬盘容量的要求不断增加，出现了扇区大小为4096字节的硬盘。这样的大扇区被我们称为“物理扇区”，上层程序是感觉不到物理扇区的存在的。 	 	
+- 逻辑扇区（the minimal size the dirve is able to wirte）：但是这样的大扇区会有兼容问题，有的系统或软件无法适应。==硬盘内部将物理扇区在逻辑上划分为多个扇区片段并将其做为普通扇区==(一般为512byte，接受指令的最小操作单元)报告给操作系统机软件。这样的扇区片段被我们称为“逻辑扇区”。==我们通常说的扇区一般指逻辑扇区==
 
 实际读写时由硬盘内的固件负责逻辑扇区于物理扇区之间进行转换，上层程序感觉不到物理扇区的存在。
 
 ## 簇
 
-格式化是对分区范围内扇区的使用进行规划，划分固定大小的簇。==格式化后分区就会以簇为最小单位读写，文件得数据，属性等信息都会保存到簇中==。
+> 在windows上可以被称为cluster，但是通用的叫法block
 
-<img src="..\..\..\imgs\_Hardware\v2-328652ba4b107448ba4703066fa10255_720w.png"/>
+格式化是对分区范围内扇区的使用进行规划，划分固定大小的簇。==如果每次读写都以扇区为单位，那么操作相对慢。所以格式化(make filesystem)后分区就会以簇(cluster)为最小单位读写(不同的filesys簇大小不同)，文件得数据，属性等信息都会保存到簇中==。
+
+![v2-328652ba4b107448ba4703066fa10255_720w](https://cdn.jsdelivr.net/gh/dhay3/image-repo@master/20210601/v2-328652ba4b107448ba4703066fa10255_720w.gujycfn8bs0.png)
+
+可以通过`stat -f`来查看fs的block size
+
+```
+cpl in /sys/block/nvme0n1/queue λ stat -f /etc/resolv.conf
+  File: "/etc/resolv.conf"
+    ID: bd5efaae75a7f210 Namelen: 255     Type: ext2/ext3
+Block size: 4096       Fundamental block size: 4096
+Blocks: Total: 64230001   Free: 52398172   Available: 49117276
+Inodes: Total: 16384000   Free: 15915349
+```
+
+如上图显示ext2/ext3的block size是4069KB，或是使用dumpe2fs来查看
+
+```
+cpl in /sys/block/nvme0n1/queue λ sudo dumpe2fs /dev/nvme0n1p7 | grep -i 'block size'
+dumpe2fs 1.46.2 (28-Feb-2021)
+Block size:               4096
+```
+
+
 
 ## 4k对齐
 
@@ -29,9 +54,13 @@ https://www.diskgenius.cn/exp/about-4k-alignment.php
 
 如果分区的起始位置没有对齐到某个物理扇区的边缘。格式化后，所有的“簇”也无法对齐到物理扇区的边缘。==如果没有对齐，额外的工作会增加，造成读写性能下降==
 
-![](..\..\..\imgs\_Linux\Snipaste_2021-03-15_11-13-58.png)
+![Snipaste_2021-03-15_11-13-58](https://cdn.jsdelivr.net/gh/dhay3/image-repo@master/20210601/Snipaste_2021-03-15_11-13-58.3rtn1fq6buq0.png)
 
 格式化后，每个簇占4个逻辑扇区，这些簇都没有对齐到物理扇区的边缘，也就是说每个簇都跨越了2个物理扇区。由于磁盘总是以物理扇区进行读写，在这种分区情况下，当要读取某个簇时，实际上总是需要多读取一个物理扇区的数据。比如要读取0号簇共4个逻辑扇区的数据，磁盘实际执行时，必须要读取0号和1号两个物理扇区共8个逻辑扇区的数据。同理，对“簇”的写入操作也是这样。显而易见，这样会造成读写性能的严重下降。
+
+==所以我们要在分区时让簇和物理扇区对齐==
+
+![2021-07-15_00-07](https://cdn.jsdelivr.net/gh/dhay3/image-repo@master/20210601/2021-07-15_00-07.rpgfgnnyb9c.png)
 
 ==在这样对齐的情况下，当要读取某个簇，磁盘实际执行时并不需要额外读取任何扇区，可以充分发挥磁盘的读写性能。显然这正是我们需要的。==
 
@@ -39,20 +68,23 @@ https://www.diskgenius.cn/exp/about-4k-alignment.php
 
 ## 如何查看4k对齐
 
-```
-root in ~ λ fdisk -l
-Disk /dev/vda: 40 GiB, 42949672960 bytes, 83886080 sectors
-Units: sectors of 1 * 512 = 512 bytes
-Sector size (logical/physical): 512 bytes / 512 bytes
-I/O size (minimum/optimal): 512 bytes / 512 bytes
-Disklabel type: dos
-Disk identifier: 0x47a9c03f
+> 一般厂商为了适配会让物理扇区和主流的filesystem（例如NTFS） block size 大小相同，一般为4k
 
-Device     Boot Start      End  Sectors Size Id Type
-/dev/vda1  *     2048 83886046 83883999  40G 83 Linux
+查看之前需要检查磁盘是否为固态
+
+```
+root in /home/ubuntu λ lsblk
+NAME   MAJ:MIN RM   SIZE RO TYPE MOUNTPOINT
+loop1    7:1    0  99.4M  1 loop /snap/core/11316
+loop2    7:2    0  99.4M  1 loop /snap/core/11187
+sr0     11:0    1 118.6M  0 rom  
+vda    252:0    0    50G  0 disk 
+└─vda1 252:1    0    50G  0 part /
 ```
 
-这里可以看到逻辑扇区和物理扇区都为512bytes(这里可以判定4k对齐)，起始柱面(起始扇区)为2048，结束柱面(结束扇区)为83886046
+RO的值为0表示为固态(众所周知固态不会旋转)
+
+### HHD
 
 ```
 root in ~ λ fdisk -l
@@ -67,4 +99,21 @@ Device     Boot Start      End  Sectors Size Id Type
 /dev/vda1  *     2048 83886046 83883999  40G 83 Linux
 ```
 
-这里可以看到逻辑扇区为512bytes和物理扇区都为4096byes，==所以如果要4k对齐每个物理扇区要包含8个逻辑扇区(4096/512)或是8的倍数。所以起始扇区需要为8的倍数。==
+这里可以看到逻辑扇区为512bytes和物理扇区为4096byes，所以如果要4k对齐每个物理扇区(==这里须知实际是block==)要包含8个逻辑扇区(4096/512)或是8的倍数。所以起始扇区需要为8的倍数。结束扇区也需要为8的倍数。根据交换律，可以推出两者之差也为8的倍数
+
+也可以通过如下方式来查看逻辑扇区大小
+
+```
+cpl in ~ λ cat /sys/block/dev01/queue/hw_sector_size 
+512
+```
+
+### SSD
+
+参考：
+
+https://unix.stackexchange.com/questions/334804/is-there-a-way-to-find-out-ssd-page-size-on-linux-unix-what-is-physical-block
+
+> fdisk中的physical sectors对ssd没有任何作用，目前没有有效的方法查看ssd的page/block，因为这个值会随着ssd的生命周期二变化
+
+但是一般的SSD的ssd page大小为4k(和主流的filesys大小相同)，ssd block大小同logical sector大小相同
