--- a/docs/Linux/basic/opensource/window system/X11.md
+++ b/docs/Linux/basic/opensource/window system/X11.md
@@ -1,12 +1,12 @@
 # X11
 
-## X11
-
 参考：
 
 https://en.wikipedia.org/wiki/X_Window_System
 
 https://medium.com/mindorks/x-server-client-what-the-hell-305bd0dc857f
+
+> 如果想在X11 server上显示X11 client graphical output需要设置DISPLAY环境变量
 
 ### 概述
 
@@ -51,9 +51,11 @@ X client 是要求渲染图形化内容和接受输入的application，例如fir
 
 ## xhost
 
+> 初始的access control list默认读取`/etc/X11.hosts`
+
 安装`x11-xserver-utils`来添加xhost
 
-xhost 用于将host names 或 user names 添加到允许连接到X server。
+xhost 用于将host names 或 user names 的X client添加到允许连接==X server==。
 
 For workstations, this is the same machine as the server.  For X terminals, it is the login host.
 
@@ -70,10 +72,98 @@ name由`host@name`或`host`组成，例如：
 
 ```
 xhost +inet:gns3vm:root
+
+cpl in ~ λ xhost +82.157.1.237
+82.157.1.237 being added to access control list
 ```
 
-初始的access control list默认读取`/etc/X11.hosts`
+这样我们就可以在自己的主机上获取82.157.1.237上firefox的窗口。
+
+```
+cpl in ~/.ssh λ ssh -Y cz@82.157.1.237 firefox
+```
+
+==如果使用了远程终端软件例如terminus，Xshell等，需要设置X11 forwarding==
+
+如果没有参数，xhost会显示所有允许和拒绝的host信息
+
+```
+cpl in ~ λ xhost
+access control enabled, only authorized clients can connect
+INET:82.157.1.137       (no nameserver response within 5 seconds)
+```
 
 ## xinput
 
+输出和测试所有X server的input device
+
+```
+cpl in ~ λ xinput       
+⎡ Virtual core pointer                          id=2    [master pointer  (3)]
+⎜   ↳ Virtual core XTEST pointer                id=4    [slave  pointer  (2)]
+⎜   ↳ MSFT0001:00 04F3:317C Mouse               id=13   [slave  pointer  (2)]
+⎜   ↳ MSFT0001:00 04F3:317C Touchpad            id=14   [slave  pointer  (2)]
+⎣ Virtual core keyboard                         id=3    [master keyboard (2)]
+    ↳ Virtual core XTEST keyboard               id=5    [slave  keyboard (3)]
+    ↳ Power Button                              id=6    [slave  keyboard (3)]
+    ↳ Video Bus                                 id=7    [slave  keyboard (3)]
+    ↳ Power Button                              id=8    [slave  keyboard (3)]
+    ↳ Integrated Camera: Integrated C           id=10   [slave  keyboard (3)]
+    ↳ Integrated Camera: Integrated I           id=11   [slave  keyboard (3)]
+    ↳ Ideapad extra buttons                     id=12   [slave  keyboard (3)]
+    ↳ AT Translated Set 2 keyboard              id=15   [slave  keyboard (3)]
+```
+
+这里可以看到X server使用的keyboard是id 15的AT Translated Set 2 keyboard，然后我们使用`xinput tset 15`就会记录下键盘上的所有操作
+
+```
+cpl in ~ λ xinput test 15
+key release 36 
+key press   37 
+key press   54 
+key release 54 
+key release 37 
+```
+
+如果用户输入了密码，那么将会被记录下来
+
+### 测试
+
+参考：
+
+https://unix.stackexchange.com/questions/129159/record-every-keystroke-and-store-in-a-file
+
+host A作为remote host（x client），且在sshd_config配置了X11Forwarding
+
+host B作为x server，使用如下命令连接host A
+
+```
+cpl in /etc/ssh λ ssh -Yp 65522  cz@hostA
+```
+
+这里需要注意的是必须使用`-Y`，如果使用`-X`或是ForwardX11会有安全限制无法使用xinput。
+
+我们在host B上执行如下命令
+
+```
+cz@gns3vm:~$ exec xinput test 15 > file
+```
+
+就可以在host A上看到在B上按下的键
+
+```
+cz@gns3vm:~$ cat file
+key press   36 
+key release 36 
+key press   36 
+key release 36 
+key press   36 
+```
+
+如果想要获取key对应键盘上的键可以使用如下脚本
+
+```
+cz@gns3vm:~$ cat file | awk 'BEGIN{while (("xmodmap -pke" | getline) > 0) k[$2]=$4}
+>      {print $0 "[" k[$NF] "]"}'
+```
 
