--- a/docs/Linux/basic/opensource/window system/X11.md
+++ b/docs/Linux/basic/opensource/window system/X11.md
@@ -49,9 +49,47 @@ X client 是要求渲染图形化内容和接受输入的application，例如fir
 
 > 这里的X client application 是firefox，X server 是用户连接用的terminal
 
+## xauth
+
+参考：
+
+https://newbedev.com/how-to-use-xauth-to-run-graphical-application-via-other-user-on-linux
+
+xauth用于修改`~/.Xauthority文件`(授权那台主机允许连接X server)
+
+- add
+
+- list
+
+  显示所有授权的主机
+
+  ```
+  cpl in ~ λ xauth list
+  cyberpelican/unix:0  MIT-MAGIC-COOKIE-1  4e64269009ae92f0dba5015ba431ebef
+  ```
+
+- info
+
+  描述xauthority文件的属性，一条entry代表一台授权的主机
+
+  ```
+  cpl in ~ λ xauth info
+  Authority file:       /home/cpl/.Xauthority
+  File new:             no
+  File locked:          no
+  Number of entries:    1
+  Changes honored:      yes
+  Changes made:         no
+  Current input:        (argv):1
+  ```
+
+- 
+
 ## xhost
 
 > 初始的access control list默认读取`/etc/X11.hosts`
+>
+> ==xhost是全部拒绝或开放，所以不安全，应该使用xauth替代==
 
 安装`x11-xserver-utils`来添加xhost
 
@@ -85,7 +123,7 @@ cpl in ~/.ssh λ ssh -Y cz@82.157.1.237 firefox
 
 ==如果使用了远程终端软件例如terminus，Xshell等，需要设置X11 forwarding==
 
-如果没有参数，xhost会显示所有允许和拒绝的host信息
+如果没有参数，xhost会显示所有允许和拒绝的host信息(==会在重启后失效==)
 
 ```
 cpl in ~ λ xhost
