--- a/docs/Net/数据链路层/数据链路层.md
+++ b/docs/Net/数据链路层/数据链路层.md
@@ -61,6 +61,8 @@
 
 ## MAC地址
 
+> 首部14byte
+
 ==在局域网中，硬件地址又称为物理地址，或 MAC 地址==
 
 请注意，如果连接在局域网上的主机或路由器安装有多个适配器，那么这样的主机或路由器就有多个“地址”。更准确些说，这种 48 位“地址”应当是某个接口的标识符。
