--- a/docs/Hardware/物理固件/电脑常见组件.md
+++ b/docs/Hardware/物理固件/电脑常见组件.md
@@ -21,6 +21,10 @@
 
   random access memory，可以写入也可以读取，也被称为主存(内存)
 
+- RAM disk
+
+  也被称为RAM drive，是我们常说的内存条
+
 - CPU
 
   central processing unit，中央处理器
