--- a/docs/Net/Net Security/网络安全.md
+++ b/docs/Net/Net Security/网络安全.md
@@ -129,9 +129,9 @@ Bob ->> Alice: use Alice's public key to encrypt the message
 note left of Alice: use Alice's secret key to dencrypt the message
 ```
 
+==人们也可以使用secret key对plain text加密，但是这一般没有意义，等于持有对方publick key的都可以获知plain text==
 
-
-签名：Alice 使用Alice’s secret key给出一段hash digest，接受方使用Alice’s public key教研是不是Alice本人发出的
+签名：Alice 使用Alice’s secret key给出一段hash digest，接受方使用Alice’s public key校验是不是Alice本人发出的
 
 ```mermaid
 sequenceDiagram
@@ -142,7 +142,7 @@ Alice ->> Bob: use Alice's secret key to encrypt the digest
 note right of Bob: use Alice's public key to dencrypt the digest, check the sender if it is Alice
 ```
 
-==人们也可以使用secret key对plain text加密，但是这一般没有意义，等于持有对方publick key的都可以获知plain text==
+
 
 ## 散列
 
