--- a/Docs/OS/Linux/basic/opensource/window system/X11.md
+++ b/Docs/OS/Linux/basic/opensource/window system/X11.md
@@ -6,16 +6,16 @@ https://en.wikipedia.org/wiki/X_Window_System
 
 https://medium.com/mindorks/x-server-client-what-the-hell-305bd0dc857f
 
-> 如果想在X11 server上显示X11 client graphical output需要设置DISPLAY环境变量
+> 如果想在 X11 server上显示 X11 client graphical output需要设置DISPLAY环境变量
 
-### 概述
+## 概述
 
 ==X window system==也被称为X(X11就是第11个版本)，为GUI提供基础的框架以及键盘和鼠标的交互，通常被用在UNIX操作系统上。
 
 X有如下几个特点：
 
 1. X使用CS模型，client 和 server可以在同一台主机上也可以不在，甚至可以是不同的arch和OS
-2. ==X和常见的CS模型相反==。X server为application提供display和I/O services，application使用这些服务所以是X client
+2. ==X和常见的CS模型相反==。X server 为application提供display和I/O services，application 使用这些服务所以是X client
 3. X可以通过加密隧道进行CS通信，例如SSH，==需要使用X forwarding参数（X或Y）==
 4. X client可以模拟X server为其他的X client提供display服务，这被称为X nesting
 
@@ -23,7 +23,11 @@ X有如下几个特点：
 
 **the X server receives input from a local keyboard and mouse and displays to a screen. A web browser and a terminal emulator run on the user's workstation and a terminal emulator runs on a remote computer but is controlled and monitored from the user's machine**
 
+## Terms
+
 ### X server
+
+> 运行 X server 的设备，需要有显示屏
 
 X server(常见的有x terminals简称xterm)可以和多种不同的client程序交互。X server为X client提供graphics resources并将input events 发送给X client
 
@@ -31,11 +35,15 @@ X server(常见的有x terminals简称xterm)可以和多种不同的client程序
 
 ### X client
 
-X client 是要求渲染图形化内容和接受输入的application，例如firefox,gnome
+> 运行 X client 的设备，可以不需要显示屏
 
-### remote SSH X11
+X client 是要求渲染图形化内容和接受输入的application，例如 firefox, gnome
 
-为了远程使用X client application，流程如下
+## remote SSH X11
+
+> 需要注意的一点是 widows 的 ssh 不支持 X11
+
+为了远程使用 X client application，流程如下
 
 1. 连接sshd时使用ForwardX11
 
@@ -45,9 +53,9 @@ X client 是要求渲染图形化内容和接受输入的application，例如fir
 
 2. 请求本地的 display/input 服务
 
-3. remote X client application连接到用户本地(请求建立连接的主机)的local X server，并为用户提供display/input服务
+3. remote X client application 连接到用户本地(请求建立连接的主机)的local X server，并为用户提供display/input服务
 
-> 这里的X client application 是firefox，X server 是用户连接用的terminal
+> 这里的X client application 是 firefox，X server 是用户连接用的 terminal
 
 ## xauth
 
@@ -83,7 +91,6 @@ xauth用于修改`~/.Xauthority文件`(授权那台主机允许连接X server)
   Current input:        (argv):1
   ```
 
-- 
 
 ## xhost
 
@@ -106,7 +113,7 @@ Name使用如下格式`famliy:name`，family可以是如下的值：
 - krb：Kerberos
 - localf
 
-name由`host@name`或`host`组成，例如：
+name 由`host@name`或`host`组成，例如：
 
 ```
 xhost +inet:gns3vm:root
