--- a/Docs/Development/Backend/Python/tutorial/5. Data Structures.md
+++ b/Docs/Development/Backend/Python/tutorial/5. Data Structures.md
@@ -287,7 +287,7 @@ list comprehensions 同样也适用于 set
 
 ## 5.5 Dictionaries
 
-key:value pairs 在 python 中被称为 dictionary，但是和 Java 中的 Map 不一样，dictionary 是有序字典
+key:value pairs 在 python 中被称为 dictionary，但是和 Java 中的 Map 不一样，dictionary 是有序字典,按照插入顺序输出 (在 python 3.7 之后出现的特性，等价于 JAVA 中的 LinkedHashMap)
 
 key 只能是 immutable 类型，strings, numbers 以及 tuples, 但是 tuples 中元素也只能是 immutable 类型。dictionary 可以通过 `{}` 来构建
 
