--- a/Docs/Development/Backend/Python/tutorial/4. More Control Flow Tools.md
+++ b/Docs/Development/Backend/Python/tutorial/4. More Control Flow Tools.md
@@ -181,7 +181,7 @@ def fib(n):    # write Fibonacci series up to n
 fib(2000)
 ```
 
-==在函数中所有的变量赋值( variable assignment )都会存储在 local symbol table==。但是如果需要使用变量，变量会先从 local symbol tables 中找，如果没有找到会从 enclosing functions local symbol table(内嵌函数的上一层函数) 中找，如果没有找到会从 gloabl symbol table 中找，如果没有找到会从 built-in table 中找
+==在函数中所有的变量赋值( variable assignment )都会存储在 local symbol table==。但是如果需要使用变量(reference variable)，变量会先从 local symbol tables 中找，如果没有找到会从 enclosing functions local symbol table(内嵌函数的上一层函数) 中找，如果没有找到会从 gloabl symbol table 中找，如果没有找到会从 built-in table 中找
 
 ```
 >>> a=30
@@ -210,10 +210,28 @@ fib(2000)
 ...        print(a)
 ...    _()    
 >>> func()
+30
+```
+
+因为变量赋值都在 local symbol table，==所以全局变量不能在函数中被赋值(这点和 C 或者 JAVA 不一样)==。如果是在类中就可以通过 `self.variable` 来对变量赋值
+
+你可以想象成在函数内声明了一个局部变量，然后赋值，这个局部变量只在函数内有效
+
+```
+>>> a=30
+>>> def func():
+...    a=10
+...    def _():
+...        a=5
+...    _()  
+...		print(a)
+>>> func()
+10
+>>> a
 10
 ```
 
-因为变量赋值都在 local symbol table，==所以全局变量不能在函数中被赋值(这点和 C 或者 JAVA 不一样)==，除非函数中声明了变量并且使用了  `global` (使用全局变量)，或者 `nonlocal` (使用 enclosing function 中的变量)
+除非函数中声明了变量并且使用了  `global` (使用全局变量)，或者 `nonlocal` (使用 enclosing function 中的变量)
 
 ```
 >>> a=30
