nginx building from source

--- a/Docs/OS/Shell/Bash/3.2.5 Bash - Compound Commands.md
+++ b/Docs/OS/Shell/Bash/3.2.5 Bash - Compound Commands.md
@@ -320,7 +320,7 @@ syntax
 ```
 
 1. 如果 `expression` 的 exit status 为 0 则 `[[expression]]` 的 exit status 为 0，反之为 1 
-2. 在 `[[ ]]` 中不会进行 filename expansion
+2. 在 `[[ ]]` 中不会进行 filename expansion，但是会扩展 tilde expansion(`~`), parameter and variable expansion, arithmetic expansion, command substitution(), process substitution(), and quote removal on those words
 
 ### expression
 
